--- a/application-template.yml
+++ b/application-template.yml
@@ -2,7 +2,7 @@ calendar:
     url: # ICS file
 
 weather:
-    # Adjust this for your needs
+    # Adjust coordinates
     url: https://api.open-meteo.com/v1/forecast?latitude=49.51&longitude=8.49&hourly=rain,showers,snowfall&timezone=Europe%2FBerlin&start_date=DATE_PLACEHOLDER&end_date=DATE_PLACEHOLDER
 
 discord:
