chore(ci): add name for latest release step

--- a/.github/workflows/auto-run.yml
+++ b/.github/workflows/auto-run.yml
@@ -24,7 +24,8 @@ jobs:
                     distribution: adopt
                     java-version: 17
 
-            -   uses: oprypin/find-latest-tag@v1
+            -   name: Find latest release
+                uses: oprypin/find-latest-tag@v1
                 id: latest
                 with:
                     repository: yannickkirschen/discord-weather-bot
